--- a/image-circles/index.html
+++ b/image-circles/index.html
@@ -9,6 +9,6 @@
 	<canvas id="canvas"></canvas>
 	<canvas id="image"></canvas>
 
-	<script src="./script.js"></script>
+	<script type="module" src="./script.js"></script>
 </body>
 </html>
