--- a/cards/index.html
+++ b/cards/index.html
@@ -2,12 +2,12 @@
 <head>
 	<title>Cards</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="sketch-styles.css">
+	<link rel="stylesheet" type="text/css" href="../sketch-styles.css">
 </head>
 
 <body>
 	<canvas id='canvas'></canvas>
 
-	<script type="module" src="cards/sketch.js"></script>
+	<script type="module" src="./sketch.js"></script>
 </body>
 </html>
