--- a/image-brush/index.html
+++ b/image-brush/index.html
@@ -10,6 +10,6 @@
 	<canvas id="canvas"></canvas>
 	<canvas id="image"></canvas>
 
-	<script type="module" src="./script.js"></script>
+	<script type="module" src="./sketch.js"></script>
 </body>
 </html>
