--- a/pannable-grid/index.html
+++ b/pannable-grid/index.html
@@ -2,12 +2,12 @@
 <head>
 	<title>Pannable Grid</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../styles.css">
+	<link rel="stylesheet" type="text/css" href="../sketsh-styles.css">
 </head>
 
 <body>
 	<canvas id='canvas'></canvas>
 
-	<script type="module" src="./script.js"></script>
+	<script type="module" src="./sketch.js"></script>
 </body>
 </html>
