--- a/gravity-spring/index.html
+++ b/gravity-spring/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Gravity Spring</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../sketsh-styles.css">
+	<link rel="stylesheet" type="text/css" href="../sketch-styles.css">
 </head>
 
 <body>
