--- a/hairy-canvas/index.html
+++ b/hairy-canvas/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Hairy Canvas</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../sketsh-styles.css">
+	<link rel="stylesheet" type="text/css" href="../sketch-styles.css">
 </head>
 
 <body>
