Fixed line-noise js/css link

--- a/line-noise/index.html
+++ b/line-noise/index.html
@@ -2,12 +2,12 @@
 <head>
 	<title>Line Noise</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="sketch-styles.css">
+	<link rel="stylesheet" type="text/css" href="../sketch-styles.css">
 </head>
 
 <body>
 	<canvas id='canvas'></canvas>
 
-	<script type="module" src="line-noise/sketch.js"></script>
+	<script type="module" src="./sketch.js"></script>
 </body>
 </html>
