--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class='about-sketch'>
                     <button class='circle-button'>
                         <div></div>
-                        <span>Hairy Canvas</span>
+                        <span></span>
                     </button>
                 </div>
             </main>
